refactor: remove dead code and clean code